# affiliate-ad-sync

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  schema.sql  setup-dev-db.py  swagger.md
.claude/: settings.local.json
.github/workflows/: deploy-dashboard.yml  sync.yml
admin-dashboard/: .env.example  composer.json  package-lock.json  package.json
admin-dashboard/routes/: web.php
database/: schema.mysql.sql  schema.postgres.sql  schema.sqlite.sql  seed.sql  sync_logs_export.csv
docs/: AdRotate csv Field Formatting.docx  AdRotate_export_adverts_01272026001347.csv  README.md  architecture.md  banner-export-verification.md  export-phase0.md  export-ship-readiness.md  filtering_rules.md  github-token-setup.md  normalization-pipeline.md  raw_api_fields.csv  schema_docs.md  sync-strategy.md  test.md  text-export-verification.md  thisoldcampsite.com-2026-03-12-055346-text.csv  thisoldcampsite.com-2026-03-12-055513-banner.csv  thisoldcampsite.com-2026-03-13-202246-banner.csv  thisoldcampsite.com-2026-03-14-055009-banner.csv  ~$Rotate csv Field Formatting.docx
scripts/: validate_export_phase0.py
sync-service/: .env.example  diagnose_awin.py  dump_raw_fields.py  pyproject.toml  test_flexoffers.py
sync-service/src/: __init__.py  config.py  db.py  geo.py  main.py
sync-service/src/mappers/: __init__.py  awin.py  base.py  cj.py  flexoffers.py  impact.py
sync-service/src/networks/: __init__.py  awin.py  base.py  cj.py  flexoffers.py  impact.py
sync-service/tests/: __init__.py  conftest.py  test_db.py  test_mappers.py  test_networks.py  test_sync.py
(+91 files in other folders)
